<resources>
    <string name="app_name">SniffSnap</string>
    <string name="sniffsnap_by_martagf">SniffSnap by MartaGF</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="group">Group</string>
    <string name="error_dog_not_found">Sorry, dog not found</string>
    <string name="dog_index_format">#%d</string>
    <string name="dog_life_expectancy_format">%s years</string>
    <string name="unknown_error">ERROR undefined status</string>
    <string name="error_unknown_host_exc">ERROR no internet connection</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email_is_not_valid">Email is NOT valid</string>
    <string name="password_must_not_be_empty">Password must NOT be empty</string>
    <string name="passwords_do_not_match">Passwords do NOT match</string>
    <string name="error_sign_up">ERROR Signing up</string>
    <string name="error_sign_in">ERROR Signing in</string>
    <string name="user_already_exists">User already exists</string>
    <string name="there_was_an_error">Sorry, an ERROR has occurred</string>
    <string name="wrong_user_or_password">Wrong user or password</string>
    <string name="camera_to_take_photos">Camera to take photos</string>
    <string name="list_of_dogs">List of dogs</string>
    <string name="settings_icon">Settings icon</string>
    <string name="logout">LOGOUT</string>
    <string name="error_adding_dog">There was an ERROR adding dog to the collection</string>
    <string name="camera_permission_rationale_dialog_title">Permission necessary</string>
    <string name="camera_permission_rationale_dialog_message">Camera permission is necessary</string>
    <string name="content_description_whole_image">Photo that the user just took</string>
    <string name="title_activity_dog_detail_compose">DogDetailComposeActivity</string>
    <string name="accept_camera_permission">You need to accept camera permission to use it</string>
    <string name="favorite_dog">Favorite Dog</string>
    <string name="logo">Login Logo</string>
    <string name="error_sign_in_google">ERROR Signing in Google</string>
    <string name="user_cancelled">User cancelled</string>
    <string name="welcome">WELCOME</string>
    <string name="favorites">Favorites</string>
    <string name="dark_mode_on_off">Dark Mode On/Off</string>
    <string name="your_age">Your Age</string>
    <string name="want_to_know_your_doggy_age">Want to know your doggy age?\n\n Enter here your age:</string>
</resources>