<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.camera.view.PreviewView
            android:id="@+id/camera_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/take_photo_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_baseline_photo_camera"
            android:layout_margin="16dp"
            android:contentDescription="@string/camera_to_take_photos" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/dog_list_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/take_photo_fab"
            android:src="@drawable/ic_baseline_list"
            android:layout_margin="16dp"
            android:contentDescription="@string/list_of_dogs" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/settings_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/take_photo_fab"
            android:src="@drawable/ic_baseline_settings"
            android:layout_margin="16dp"
            android:contentDescription="@string/settings_icon" />

        <ProgressBar
            android:id="@+id/loading_wheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    </RelativeLayout>
</layout>